--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -101,7 +101,7 @@
 
 .confirmation {
     position: fixed;
-    top: 15%;
+    top: 30%;
     right: 0%;
     width: 170px;
     height: 50px;
